<package format="2">

  <name>dubins_curves</name>
  <version>0.1.0</version>

  <description>
    Package to create dubins curves
  </description>

  <maintainer email="renan028@gmail.com">Renan</maintainer>
  <license>Commercial</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
</package>
